cmake_minimum_required(VERSION 3.16)

project(MosuiBasic VERSION ${MOSUI_VERSION} LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)



add_subdirectory(qwindowkit)
 
# 动态库目录
if(NOT DEFINED LIBRARY_SHARED_OUTPUT_DIRECTORY OR NOT EXISTS ${LIBRARY_SHARED_OUTPUT_DIRECTORY})
    set(LIBRARY_SHARED_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/shared CACHE PATH "动态库文件输出目录" FORCE)
    file(MAKE_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY})
endif()

set(QT_QML_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY})
if(NOT EXISTS ${QT_QML_OUTPUT_DIRECTORY}/MosuiBasic)
    file(MAKE_DIRECTORY ${QT_QML_OUTPUT_DIRECTORY}/MosuiBasic)
endif()

file(GLOB QML_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "qml/*.qml")
file(GLOB CPP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
    "cpp/*.cpp" "cpp/*.h"
    "cpp/theme/*.cpp" "cpp/theme/*.h"
    "cpp/window/*.cpp" "cpp/window/*.h"
    "cpp/controls/*.cpp" "cpp/controls/*.h"
    "cpp/utils/*.cpp" "cpp/utils/*.h"
    "cpp/Icon/*.cpp" "cpp/Icon/*.h"
)

# 动态库
qt_add_library(${PROJECT_NAME} SHARED)

qt_add_qml_module(
    ${PROJECT_NAME}
    URI MosuiBasic
    VERSION ${MOSUI_VERSION}
    QML_FILES ${QML_FILES}
    SOURCES
        ${CPP_FILES}
    RESOURCES
        resources/res.qrc
)
set_target_properties(${PROJECT_NAME} PROPERTIES
    QMLDIR_OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/qmldir"
)

target_link_libraries(${PROJECT_NAME} PUBLIC
    QWKCore
    QWKQuick

    Qt6::Core
    Qt6::Qml
    Qt6::Quick
    Qt6::QuickPrivate
    Qt6::QuickTemplates2
    Qt6::QuickTemplates2Private

)

set_target_properties(${PROJECT_NAME} PROPERTIES
    QT_QML_MODULE_URI MosuiBasic
    VERSION ${MOSUI_VERSION}

    # Linux / macOS 动态库 .so / .dylib
    LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_SHARED_OUTPUT_DIRECTORY}

    # Windows 动态库 .dll
    RUNTIME_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_SHARED_OUTPUT_DIRECTORY}

    # Windows 导入库 .lib
    ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_SHARED_OUTPUT_DIRECTORY}

    # 强制 Qt QML 插件也输出到目标目录
    # QT_QML_MODULE_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
    # QT_QML_MODULE_TARGET_PATH ${LIBRARY_SHARED_OUTPUT_DIRECTORY}
)

# 全局兜底
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_SHARED_OUTPUT_DIRECTORY})

target_compile_definitions(${PROJECT_NAME}
    PRIVATE
    $<BUILD_INTERFACE:MOSUIBASIC_LIBRARY>
    $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
)

target_include_directories(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/theme
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/window
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/controls
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/utils
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/Icon
)
